fix: настроила пути к изображениям

--- a/blocks/element/__like/element__like_off.css
+++ b/blocks/element/__like/element__like_off.css
@@ -1,7 +1,7 @@
 .element__like_off {
     width: 22px;
     height: 22px;
-    background-image: url(./images/like-off.svg);
+    background-image: url(../../../images/like-off.svg);
     background-repeat: no-repeat;
     background-size: contain;
     cursor: pointer;
