--- a/blocks/element/__like/element__like_on.css
+++ b/blocks/element/__like/element__like_on.css
@@ -1,7 +1,7 @@
 .element__like_on {
     width: 22px;
     height: 22px;
-    background-image: url(./images/like-on.svg);
+    background-image: url(../../../images/like-on.png);
     background-repeat: no-repeat;
     background-size: contain;
     cursor: pointer;
