--- a/blocks/popup/__btn-close/popup__btn-close.css
+++ b/blocks/popup/__btn-close/popup__btn-close.css
@@ -1,5 +1,5 @@
 .popup__btn-close {
-    background-image: url(./images/close-icon.svg);
+    background-image: url(../../../images/close-icon.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #000000;
