--- a/blocks/popup/__input/popup__input_edit_description.css
+++ b/blocks/popup/__input/popup__input_edit_description.css
@@ -6,7 +6,7 @@
     width: 358px;
     margin: 0 0 48px 36px;
     display: flex;
-    padding: 0;
+    padding-bottom: 13px;
 }
 
 @media screen and (max-width: 640px) {
