--- a/blocks/element/__like-off/element__like-off.css
+++ b/blocks/element/__like-off/element__like-off.css
@@ -1,9 +1,13 @@
-.element__like_on {
+.element__like-off {
     width: 22px;
     height: 22px;
-    background-image: url(../../../images/like-on.png);
+    background-image: url(../../../images/like-off.svg);
     background-repeat: no-repeat;
     background-size: contain;
     cursor: pointer;
     align-self: flex-end;
+}
+
+.element__like-off:hover {
+    opacity: 0.5;
 }
