--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -10,14 +10,19 @@
     padding: 0;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 940px) {
     .profile__title {
         font-size: 27px;
         line-height: 33px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .profile__title {
         text-align: center;
         max-width: 189px;
         max-height: 26px;
-        margin-right: 10px;
+        margin: 0 auto;
         position: relative;
     }
 }
