--- a/blocks/popup/__conteiner/popup__conteiner.css
+++ b/blocks/popup/__conteiner/popup__conteiner.css
@@ -2,15 +2,15 @@
     width: 430px;
     height: 330px;
     background-color: #ffffff;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    position: fixed;
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    flex-direction: column;
     margin: auto;
     border-radius: 10px;
     border: none;
     padding: 0;
+    position: relative;
 }
 
 @media screen and (max-width: 640px) {
