--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,7 +5,7 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    margin: 0 0 54px auto;
+    margin: 0 auto 54px 0;
     padding-top: 34px;
     padding-left: 36px;
 }
