--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,10 +14,19 @@
     opacity: 0.7;
 }
 
+@media screen and (max-width: 940px) {
+    .profile__edit-button {
+        margin: 0 0 0 20px;
+    }
+}
+
 @media screen and (max-width: 640px) {
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        margin-top: 8px;
+        margin-left: 10px;
+        align-self: flex-end;
+        position: absolute;
+        right: 20px;
     }
 }
